--- a/style.css
+++ b/style.css
@@ -1,43 +1,48 @@
-body{
-    overflow: hidden;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+*{
+    font-family: 'Roboto';
 }
-.wallpaper{
+body{
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow-y: hidden;
+}
+.container{
     width: 100%;
     height: 100%;
-    position: absolute;
+    background-image: url(picture/wallpaper.jpg);
+    background-size: 100vw 100vh;
 }
-h1{
-    font-style: italic;
-    position: absolute;
-    color: azure; 
-    margin-top: 320px;
+.logo{
+    color: white;
+    margin-left: 20px;
+    margin-top: 20px;
+    font-size: 30px;
+}
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+}
+nav{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+.nazrin{
+    color: white;
+    font-size: 20px;
+    margin: 10px;
+}
+.text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: white;
     font-size: 50px;
 }
-.wel {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-   
-}
-.words {
-    color: azure;
-    position: absolute;
-    margin-left: 80rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    font-size: 15px;
-}
-.cart{
-    margin-left: 10px;
-}
-.profile {
-    margin-left: 10px;
-}
-.galaxy{
-    position: absolute;
-    color: azure;
-    font-size: 15px;
-    margin-left: 10px;
-}
- 
